tests/toylang/pos/000098_cdrc2.toylang
program a = { if a then { } else sleep; } .
