tests/toylang/neg/000783_mutation.toylang
program a = { a = program a = { } . a + a; } .
